RESOLVED FIXED303744
Fix release build when assertions are disabled
https://bugs.webkit.org/show_bug.cgi?id=303744
Summary Fix release build when assertions are disabled
Simon Pena
Reported 2025-12-08 03:31:29 PST
After 304045@main, newly added ASSERT_NOT_REACHED introduced build failures when assertions are disabled.
Attachments
Simon Pena
Comment 1 2025-12-08 03:34:22 PST
EWS
Comment 2 2025-12-08 05:58:31 PST
Committed 304091@main (a042fea320a1): <https://commits.webkit.org/304091@main> Reviewed commits have been landed. Closing PR #55027 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-08 05:59:13 PST
Note You need to log in before you can comment on or make changes to this bug.