Fix release build when assertions are disabled https://bugs.webkit.org/show_bug.cgi?id=303744

Unreviewed build fix.

Added default value returns after ASSERT_NOT_REACHED when processing all
enum options.

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingUtils.cpp:
(WebCore::Layout::InlineFormattingUtils::snapToInt):
* Source/WebCore/layout/integration/LayoutIntegrationBoxGeometryUpdater.cpp:
(WebCore::LayoutIntegration::snapToInt):

Canonical link: https://commits.webkit.org/304091@main